getReservationByID reservation api
